# resume_generator

./: .dockerignore  AGENTS.md  README.md  pyproject.toml  ruff.toml
apps/backend/: AGENTS.md  Dockerfile  server.py
apps/bot/: AGENTS.md  Dockerfile  bot.py
hooks/: pre-push
infra/: AGENTS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
infra/caddy/: Caddyfile  Dockerfile
scripts/: manage.sh
tests/: conftest.py  test_health.py  test_imports.py
