[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-generator"
version = "0.1.0"
description = "Resume generator platform with FastAPI backend and Telegram bot interface"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "python-telegram-bot",
    "SQLAlchemy",
    "asyncpg",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
